--- a/css/projektna.css
+++ b/css/projektna.css
@@ -1,5 +1,34 @@
-.navbar{
-    background-color:#1A2930;
+.navbar-default, .navbar, .navbar-header{
+    background-color:yellow;
+    color:red;
 }
 
+.glava{
+    background-color: red;
+    width: 100%;
+    height: 70px;
+    padding-top: 8px;
+    padding-left: 20px;
+}
 
+.gumb{
+    background-color: green;
+    border: none;
+    height: 50px;
+}
+
+.gumb:hover {
+    background-color: yellow;
+    border: none;
+    height: 50px;
+}
+
+.content{
+    background-color: blue;
+    height: 75%;
+}
+
+.noga{
+    background-color: red;
+    height: 70px;
+}
