--- a/css/projektna.css
+++ b/css/projektna.css
@@ -1,6 +1,6 @@
 .navbar-default, .navbar, .navbar-header{
-    background-color:yellow;
-    color:red;
+    background-color:#0A1612;
+    border: 0;
 }
 
 .glava{
@@ -18,7 +18,6 @@
 }
 
 .gumb:hover {
-    background-color: yellow;
     border: none;
     height: 50px;
 }
@@ -31,4 +30,21 @@
 .noga{
     background-color: red;
     height: 70px;
+}
+
+
+
+
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+  }
+
+.razmik-brand{
+    padding-left: 20px;
 }
