--- a/css/projektna.css
+++ b/css/projektna.css
@@ -3,39 +3,7 @@
     border: 0;
 }
 
-.glava{
-    background-color: red;
-    width: 100%;
-    height: 70px;
-    padding-top: 8px;
-    padding-left: 20px;
-}
-
-.gumb{
-    background-color: green;
-    border: none;
-    height: 50px;
-}
-
-.gumb:hover {
-    border: none;
-    height: 50px;
-}
-
-.content{
-    background-color: blue;
-    height: 75%;
-}
-
-.noga{
-    background-color: red;
-    height: 70px;
-}
-
-
-
-
-footer {
+footer{
     position: absolute;
     right: 0;
     bottom: 0;
@@ -43,8 +11,22 @@ footer {
     padding: 1rem;
     background-color: #efefef;
     text-align: center;
-  }
+}
 
 .razmik-brand{
     padding-left: 20px;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+.razmik-nav{
+    margin-left: 30px;
+
+}
+
+.vsebina{
+    background-color: red;
+    
 }
