--- a/css/projektna.css
+++ b/css/projektna.css
@@ -28,5 +28,19 @@ body{
 
 .vsebina{
     background-color: red;
-    
+}
+
+.element{
+    background-color: green;
+    border: 1px solid black;
+}
+
+.top{
+    margin-top: 0;
+}
+
+.vprasanja{
+    background-color: green;
+    border: 1px solid black;
+    height: 500px;
 }
