--- a/css/projektna.css
+++ b/css/projektna.css
@@ -33,11 +33,30 @@ body{
 
 .element{
     background-color: green;
-    border: 1px solid black;
+    border-right: 1px solid black;
+    height: 90vh;
 }
 
 .vprasanja{
     background-color: green;
-    border: 1px solid black;
+    border-left: 1px solid black;
     height: 90vh;
+}
+
+.naslov{
+    text-align: center;
+}
+
+.odgovori{
+    height: 200px;
+    border: 1px solid black;
+    background-color: red;
+}
+
+.poslji{
+    height: 50px;
+    border: 1px solid black;
+    background-color: blue;
+    text-align: center;
+    font-size: 30px;
 }
