--- a/css/upravljanje.css
+++ b/css/upravljanje.css
@@ -65,6 +65,13 @@ body{
     border-bottom: 1px solid black;
     background-color: #ffffff;
 }
+.odgovori5{
+    height: 350px;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: #ffffff;
+}
 
 .vnesi{
     width: 300px;
