--- a/css/upravljanje3.css
+++ b/css/upravljanje3.css
@@ -1,25 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-html{
-    font-family: 'Roboto', sans-serif;
-}
+
 body{
     background-color: #dcdcdc;
 }
-
 .navbar-default, .navbar, .navbar-header{
     background-color:#0A1612;
     border: 0;
     margin-bottom: 0px !important;
 }
 
-.form-control{
-    width: 70%;
-}
-.vprasanja h1{
-    font-family: 'Roboto', sans-serif;
-    background-color: red;
-}
 footer{
     position: fixed;
     right: 0;
@@ -34,29 +24,32 @@ footer{
     padding-left: 20px;
 }
 
+
+
 .razmik-nav{
     margin-left: 30px;
     float: right;
 }
 
-.vprasanja{ 
+.vprasanja{
+    
     border-left: 1px solid black;
     height: 90vh;
 }
 
 .naslov{
     text-align: center;
-    font-family: 'Roboto', sans-serif;
 }
 
 .odgovori1{
-    height: 200px;
+    height: 385px;
     border: 1px solid black;
     background-color: #ffffff;
+    
 }
 
 .odgovori2{
-    height: 200px;
+    height: 385px;
     border-top: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
@@ -64,7 +57,7 @@ footer{
 }
 
 .odgovori3{
-    height: 200px;
+    height: 385px;
     border-left: 1px solid black;
     border-bottom: 1px solid black;
     border-right: 1px solid black;
@@ -72,18 +65,35 @@ footer{
 }
 
 .odgovori4{
-    height: 200px;
+    height: 385px;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: #ffffff;
+}
+.odgovori5{
+    height: 385px;
+    border-left: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
     background-color: #ffffff;
 }
 
-.poslji{
+.vnesi{
+    width: 300px;
     height: 50px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: #ffffff;
-    text-align: center;
-    font-size: 30px;
+}
+
+input[type=textarea]{
+    height:30px;
+    width:60%;
+    
+}
+input[type=text]{
+    height:30px;
+    width:60%;
+    
+}
+
+.btn{
+    background-color: #efefef;
 }
